# new-rust-be

./: .dockerignore  .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile  FLOW_DOCUMENTATION.md  README  README.md  docker-build-push.ps1  docker-build-push.sh  docker-compose.yml  docker-run.ps1  docker-run.sh  env.template
.cargo/: config.toml
.cursor/rules/: commit-messages.mdc  doc-writing.mdc  documentation.mdc  logging.mdc  project.mdc
k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  rbac.yaml  secret.yaml.example  serviceaccount.yaml
libs/: README.md
src/: constants.rs  fe_protocol.rs  main.rs  price_ticket_type.rs  types.rs
src/cache/: mod.rs
src/configs/: config.rs  crm_db.rs  kafka.rs  mediation_db.rs  mod.rs  pool_factory.rs  rating_db.rs
src/crypto/: aes.rs  mod.rs
src/db/: README.md  error.rs  mapper.rs  mod.rs  repository.rs  sequence.rs
src/handlers/: connect.rs  handshake.rs  lookup_vehicle.rs  mod.rs  processor.rs  query_vehicle_boo.rs  roaming.rs  terminate.rs
src/logging/: cleanup.rs  common.rs  config.rs  daily_rotating_writer.rs  file_logger.rs  mod.rs  process_type.rs  statistics.rs
src/logic/: handler.rs  mod.rs
src/models/: TCOCmessages.rs  TollCache.rs  VDTCmessages.rs  VETCmessages.rs  bect_messages.rs  hub_events.rs  mod.rs  rating_detail.rs
src/network/: client_ip.rs  connection.rs  mod.rs  router.rs  server.rs  session.rs  terminate.rs
src/services/: cache.rs  ip_block_service.rs  kafka_consumer_service.rs  mod.rs  service.rs  (+8 more)
(+104 files in other folders)
